snap/tests/not_json_serializable.stderr
error[E0277]: the trait bound `for<'de> NotSerializable: Deserialize<'de>` is not satisfied
 --> tests/not_json_serializable.rs:8:5
  |
8 |     #[snapshot]
  |     ^^^^^^^^^^^ the trait `for<'de> Deserialize<'de>` is not implemented for `NotSerializable`
  |
  = help: the following other types implement trait `Deserialize<'de>`:
            &'a Path
            &'a [u8]
            &'a str
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
  = note: required because of the requirements on the impl of `DeserializeOwned` for `NotSerializable`
note: required by a bound in `from_reader`
 --> $CARGO/serde_json-1.0.89/src/de.rs
  |
  |     T: de::DeserializeOwned,
  |        ^^^^^^^^^^^^^^^^^^^^ required by this bound in `from_reader`
  = note: this error originates in the attribute macro `snapshot` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotSerializable: Serialize` is not satisfied
 --> tests/not_json_serializable.rs:8:5
  |
8 |     #[snapshot]
  |     ^^^^^^^^^^^ the trait `Serialize` is not implemented for `NotSerializable`
  |
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
          and $N others
note: required by a bound in `to_writer_pretty`
 --> $CARGO/serde_json-1.0.89/src/ser.rs
  |
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_writer_pretty`
  = note: this error originates in the attribute macro `snapshot` (in Nightly builds, run with -Z macro-backtrace for more info)
